--- a/web/tBien/tabla_equipos.xhtml
+++ b/web/tBien/tabla_equipos.xhtml
@@ -33,6 +33,12 @@
                         <p:column headerText="#{recursos.ListTBienTitle_MSerial}" filterBy="#{cabecera.MSerial.MNombre}" filterMatchMode="contains">
                             <h:outputText value="#{cabecera.MSerial.MNombre}"/>
                         </p:column>
+                        <p:column headerText="#{recursos.ListTBienTitle_BSerie}" filterBy="#{cabecera.BSerie}" filterMatchMode="contains">
+                            <h:outputText value="#{cabecera.BSerie}"/>
+                        </p:column>
+                        <p:column headerText="#{recursos.ListTBienTitle_BIpAdress}" filterBy="#{cabecera.BIpAdress}" filterMatchMode="contains">
+                            <h:outputText value="#{cabecera.BIpAdress}"/>
+                        </p:column>
                         <p:column headerText="#{recursos.ListTBienTitle_BModelo}" filterBy="#{cabecera.BModelo}" filterMatchMode="contains">
                             <h:outputText value="#{cabecera.BModelo}"/>
                         </p:column>
