--- a/web/tBien/tabla_dispositivos.xhtml
+++ b/web/tBien/tabla_dispositivos.xhtml
@@ -16,7 +16,7 @@
 <ui:define name="content">
             <h:form id="TBienListForm">
                 <p:panel header="#{recursos.ListTBienTitle}">
-                    <p:dataTable id="datalist" value="#{mBEquipos.equipos}" var="cabecera"
+                    <p:dataTable id="datalist" value="#{mBEquipos.dispositivos}" var="cabecera"
                                  selectionMode="single" selection="#{mBEquipos.selected}"
                                  paginator="true"
                                  rowKey="#{cabecera.BSerial}"
