--- a/web/tBien/tabla_dispositivos.xhtml
+++ b/web/tBien/tabla_dispositivos.xhtml
@@ -14,7 +14,7 @@
                 title
             </ui:define>
 <ui:define name="content">
-            <h:form id="TBienListForm">
+            <h:form id="TBienListFormDisp">
                 <p:panel header="#{recursos.ListTBienTitle}">
                     <p:dataTable id="datalist" value="#{mBEquipos.dispositivos}" var="cabecera"
                                  selectionMode="single" selection="#{mBEquipos.selected}"
