--- a/web/usuarios-tic/dispositivo.xhtml
+++ b/web/usuarios-tic/dispositivo.xhtml
@@ -21,7 +21,7 @@
                     <p:panelGrid id="pnl_grid" style="width:100%">
                         <f:facet name="header">
                             <p:row>
-                                <p:column colspan="6">Registro de Equipos</p:column>
+                                <p:column colspan="6">Registro de Dispositivos</p:column>
                             </p:row>
                         </f:facet>
                         <p:row>
@@ -31,7 +31,7 @@
                             <p:column colspan="3">
                                 <p:selectOneMenu id="cbx_tipo_eq" value="#{mBBienes.categoria.tbSerial}" required="true" disabled="#{mBBienes.bol_det eq true}">
                                     <f:selectItem  itemLabel=""/>
-                                    <f:selectItems  value="#{tTipoBienController.equipos}" var="tipo" itemValue="#{tipo.tbSerial}" itemLabel="#{tipo.tbNombre}"/>
+                                    <f:selectItems  value="#{tTipoBienController.dispositvos}" var="tipo" itemValue="#{tipo.tbSerial}" itemLabel="#{tipo.tbNombre}"/>
                                     <f:ajax render="cbx_tipo_eq"/>
                                 </p:selectOneMenu>
                             </p:column>
@@ -144,9 +144,8 @@
                         <f:facet name="footer">
                             <p:row>
                                 <p:column colspan="6">
-                                    <p:commandButton id="btn_reg" value="Registrar" icon="ui-icon-disk" rendered="#{mBBienes.bol_det eq false}" actionListener="#{mBBienes.crearEquipo()}" update=":frm_equipo :growl"/>
-                                    <p:commandButton id="btn_new" value="Crear equipo nuevo" icon="ui-icon-refresh" rendered="#{mBBienes.bol_det eq true}" actionListener="#{mBBienes.limpiar()}" update=":frm_equipo"/>          
-                                    <p:commandButton id="btn_add" value="Agregar dispositivos" icon="ui-icon-plus" rendered="#{mBBienes.bol_det eq true}"  onclick="PF('wv_crear_det').show();" update=":frm_crear_detalle"/>
+                                    <p:commandButton id="btn_reg" value="Registrar" icon="ui-icon-disk" rendered="#{mBBienes.bol_det eq false}" actionListener="#{mBBienes.crearEquipo()}" action="/tBien/tabla_dispositivos" update=":frm_equipo :growl"/>
+                                    <p:commandButton id="btn_new" value="Crear Dispositivo nuevo" icon="ui-icon-refresh" rendered="#{mBBienes.bol_det eq true}" actionListener="#{mBBienes.limpiar()}" update=":frm_equipo"/>          
                                 </p:column>
                             </p:row>
                         </f:facet>
@@ -154,61 +153,10 @@
                 </h:panelGroup>
             </p:panel>
             <p:separator/>
-            <p:panel rendered="#{mBBienes.bol_det eq true and tBienController.tbl_det eq true }">
-                <p:dataTable id="datalist" value="#{tBienController.detalles}" var="det"
-                             paginator="true"
-                             rowKey="#{item.tbSerial}"
-                             rows="10"
-                             rowsPerPageTemplate="10,20,30,40,50"
-                             >
-                    <p:column headerText="Cod-HEE">
-                        <p:outputLabel value="#{det.BCodigoHee}"/>
-                    </p:column>
-                    <p:column headerText="Dispositivo">
-                        <p:outputLabel value="#{det.tbSerial.tbNombre}"/>
-                    </p:column>
-                    <p:column headerText="Marca">
-                        <p:outputLabel value="#{det.MSerial.MNombre}"/>
-                    </p:column>
-                    <p:column headerText="Bitácora:">
-                        <p:outputLabel value="#{det.BDescripcion}"/>
-                    </p:column>
-                    <p:column headerText="Modificaciones">
-                        <p:commandLink value="Editar" oncomplete="PF('wv_editar_det').show();" update=":frm_editar_det" title="Editar dispositivo" styleClass="ui-icon ui-icon-pencil">
-                            <f:setPropertyActionListener target="#{tBienController.detalle}" value="#{det}"/>
-                        </p:commandLink>
-                        <p:commandLink value="Eliminar" oncomplete="PF('dlg_eliminar_det').show();" update=":formEliminar" title="Eliminar dispositivo" styleClass="ui-icon ui-icon-trash">
-                            <f:setPropertyActionListener target="#{tBienController.detalle}" value="#{det}" />               
-                        </p:commandLink>
-                    </p:column>
-                </p:dataTable>
-            </p:panel>
+            
         </h:form>
-        <ui:include src="/usuarios-tic/dlg_editar_detalle.xhtml"/>
-        <ui:include src="/usuarios-tic/dlg-crear-detalle.xhtml"/>
-        <h:form id="formEliminar">
-            <p:dialog id="dlgEliminarCarrera" header="Eliminar Registro!" widgetVar="dlg_eliminar_det" resizable="false" 
-                      showEffect="explode" hideEffect="explode" modal="true">
-
-                <p:panelGrid style="width: 100%" >
-                    <p:row>
-                        <p:column>
-                            <h:outputText value="Desea continuar con la transacción?"/>
-                        </p:column>
-                    </p:row>
-                    <f:facet name="footer">
-                        <p:row>
-                            <p:column>
-                                <p:commandButton value="Si" actionListener="#{tBienController.eliminarDet()}"
-                                                 update=":frm_equipo:datalist :growl" 
-                                                 oncomplete="PF('dlg_eliminar_det').hide();"/>
-                                <p:commandButton value="No" oncomplete="PF('dlg_eliminar_det').hide();"/>
-                            </p:column>
-                        </p:row>
-                    </f:facet>
-                </p:panelGrid>
-            </p:dialog>
-        </h:form>
+      
+   
             </ui:define>
 
         </ui:composition>
