--- a/web/usuarios-tic/dispositivo.xhtml
+++ b/web/usuarios-tic/dispositivo.xhtml
@@ -122,7 +122,7 @@
                                 </p:selectOneMenu>
                             </p:column>
                             <p:column>
-                                <p:outputLabel value="IP-Address: " for="lbl_ip"/>
+                                <p:outputLabel value="IP/MAC-Address: " for="lbl_ip"/>
                             </p:column>
                             <p:column>
                                 <p:inputText id="lbl_ip" style="width:100%" value="#{mBBienes.equipo.BIpAdress}" size="43" placeholder="No aplica" disabled="#{mBBienes.bol_det eq true}"/>
