--- a/web/tBien/tabla_equipos.xhtml
+++ b/web/tBien/tabla_equipos.xhtml
@@ -53,7 +53,7 @@
                         </p:column>
                         <f:facet name="footer">
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{recursos.View}" update=":TBienViewForm" oncomplete="PF('TBienViewDialog').show()" disabled="#{empty mBEquipos.selected}" style="width: 90px"/>
-                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{recursos.Edit}" actionListener="#{mBEquipos.pasarCabecera()}" disabled="#{empty mBEquipos.selected}" style="width: 90px"/>
+                            <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{recursos.Edit}" actionListener="#{mBEquipos.pasarCabecera()}" action="/tBien/editar_equipos.xhtml" disabled="#{empty mBEquipos.selected}" style="width: 90px"/>
                             <p:commandButton id="deleteButton" icon="ui-icon-trash"  value="#{recursos.Delete}" actionListener="#{mBEquipos.destroy}" update=":growl,datalist" disabled="#{empty mBEquipos.selected}" style="width: 90px" rendered="#{mBEquipos.btnEliminar eq true}"/>
                         </f:facet>
                     </p:dataTable>
