--- a/web/tBien/dlg_editar_detalle.xhtml
+++ b/web/tBien/dlg_editar_detalle.xhtml
@@ -17,6 +17,12 @@
                         <p:column colspan="3">
                             <p:outputLabel value="#{mBEdicionEquipos.detalle.tbSerial.tbNombre}"/>     
                         </p:column>
+                         <p:column>
+                               <p:outputLabel value="Cabecera"  />
+                        </p:column>
+                           <p:column>
+                               <p:inputText value="#{mBEdicionEquipos.detalle.BCodigoHee}"  />
+                        </p:column>
                     </p:row> 
                     <p:row>
                         <p:column>
@@ -29,7 +35,7 @@
                             <p:outputLabel value="Código HEE:"/>        
                         </p:column>
                         <p:column>
-                            <p:outputLabel value="#{mBEdicionEquipos.detalle.BCodigoHee}" />
+                            <p:outputLabel value="#{mBEdicionEquipos.detalle.padreBserial}"  />
                         </p:column>
                     </p:row>
                     <p:row>
