--- a/web/tBien/tabla_dispositivos.xhtml
+++ b/web/tBien/tabla_dispositivos.xhtml
@@ -15,7 +15,7 @@
             </ui:define>
             <ui:define name="content">
                 <h:form id="TBienListForm">
-                    <p:panel header="#{recursos.ListTBienTitle}">
+                    <p:panel header="Dispositivos">
                         <p:dataTable id="datalist" value="#{mBEquipos.dispositivos}" var="cabecera"
                                      selectionMode="single" selection="#{mBEquipos.selected}"
                                      paginator="true"
