--- a/web/tBien/dlg_ver_detalle.xhtml
+++ b/web/tBien/dlg_ver_detalle.xhtml
@@ -26,7 +26,7 @@
                             <p:outputLabel value="#{mBEdicionEquipos.detalle.BSerial}"/>
                         </p:column>
                         <p:column>
-                            <p:outputLabel value="Código HEE:"/>        
+                            <p:outputLabel value="Código HEE DV:"/>        
                         </p:column>
                         <p:column>
                             <p:outputLabel value="#{mBEdicionEquipos.detalle.BCodigoHee}" />
